# choupi-os

./: .gitignore  .gitmodules  Cargo.toml  Makefile  PERFORMANCE.md  README.md  TODO.md  gdb-helpers.py  stm32f401xe.ld
src/: argbuf.rs  context.rs  contextallocator.rs  contextnum.rs  debug.rs  example_host.cpp  ffi.h  ffi.rs  filename.rs  fs.h  lib.rs  main.c  malloc.c  newlib_stubs.c  runtime.rs  stm32f4xx_it.c
src/allocator/: Cargo.toml  lib.rs
src/arch/: mod.rs
src/arch/host/: alloc_ll.rs  constants.rs  context_ll.rs  emulator.rs  flash_ll.rs  mod.rs  mpu_ll.rs  privilege.rs  registers.rs  siginfo.rs  syscall_ll.rs  usart_ll.rs
src/arch/stm32f401re/: alloc_ll.rs  bindings.rs  constants.rs  context_ll.rs  flash_ll.rs  mod.rs  mpu_ll.rs  privilege.rs  registers.rs  syscall_ll.rs  usart_ll.rs
src/flash/: mod.rs  tests.rs
src/fs/: mod.rs  tests.rs
src/hashset/: mod.rs  tests.rs
src/mpu/: mod.rs  tests.rs
src/std/: Cargo.toml  lib.rs
src/syscall/: fs.rs  mod.rs  remotecall.rs  test.rs  tests.rs  usart.rs
src/tools/: mod.rs  tests.rs
