[package]
name = "javacard-os"
version = "1.0.0"
authors = [ "Leo Gaspard <leo@gaspard.io>",
            "Guillaume Bouffard <guillaume.bouffard@ssi.gouv.fr>" ]
readme = "README.md"
license = "MIT"

[lib]
path = "src/lib.rs"
crate-type = [ "staticlib" ]

[features]
default = [ "embedded" ]
embedded = [ "std", "allocator" ]
big_ram = []
host = [ "ipc-channel", "lazy_static", "libc",
         "slog/max_level_error", "slog-term" ]
stm32f401re = []

[profile.dev]
lto = "off"
opt-level = "z"
debug = true
debug-assertions = true
panic = "abort"

[profile.release]
lto = false
opt-level = "s"
debug = true
debug-assertions = false
panic = "abort"

[dependencies]
allocator = { path = "src/allocator", optional = true }
ipc-channel = { version = "0.13.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
libc = { version = "0.2", optional = true, features = ["extra_traits"]}
slog = { version = "2.5.2", optional = true, features = ["max_level_debug", "release_max_level_warn"] }
slog-term = { version = "2.5.0", optional = true }
spin = { version = "0.5.2" }
std = { path = "src/std", optional = true }

[dev-dependencies]
speculate = "0.1"
